--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DefinitelyNotBot",
+  "name": "Crow gang",
   "description": "A Discord bot coded in Discord.JS, hosted using Heroku.",
   "version": "1.0.0",
   "main": "bot.js",
