--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yumeko",
+  "name": "Sugu bot",
   "version": "0.1.0",
   "description": "A simple discord bot",
   "main": "MusicBot.js",
